--- a/Xmen/Xmen001.html
+++ b/Xmen/Xmen001.html
@@ -10,7 +10,13 @@
 X-Men<br>
 <img src="Xmen001.jpg"> <br>
 <p>
-#1 Story: After a day of training and meeting Jean Grey, a new student at Professor X's school, the X-Men go one their first assignment, stopping a mutant named Magneto from talking over an Air Force base.
+After a day of training and meeting Jean Grey, a new student at Professor X's school, the X-Men go one their first assignment, stopping a mutant named Magneto from talking over an Air Force base.
+</p><p>
+Cover pencils by Jack Kirby, inks by Sol Brodsky, Script by Stan Lee, Pencils by Jack Kirby, inks by Paul Reinman.
+</p><p>
+This is it, the first issue of the Uncanny X-Men, and even in the beginning, there was Magneto, the Earth's most powerful super villain. Conceived by Stan Lee and Jack Kirby, this first issue will always remain one of the core books within the Marvel Comics mythos. This is Stan and Jack making history and legend, although no one knew it at the time. 
+</p><p>
+Full page house ads for Amazing Spider-Man #4 and Sgt. Fury and His Howling Commandos #3.
 </p>
 </body>
 </html>
