--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -82,6 +82,26 @@ The X-Men are mutants, a subspecies of humans who are born with superhuman abili
 
 <ul>
 <li><a href="Xmen001.html">X-Men #1</a></li>
+<li><a href="Xmen002.html">X-Men #2</a></li>
+<li><a href="Xmen003.html">X-Men #3</a></li>
+<li><a href="Xmen004.html">X-Men #4</a></li>
+<li><a href="Xmen005.html">X-Men #5</a></li>
+<li><a href="Xmen006.html">X-Men #6</a></li>
+<li><a href="Xmen007.html">X-Men #7</a></li>
+<li><a href="Xmen008.html">X-Men #8</a></li>
+<li><a href="Xmen009.html">X-Men #9</a></li>
+<li><a href="Xmen010.html">X-Men #10</a></li>
+<li><a href="Xmen010.html">X-Men #11</a></li>
+<li><a href="Xmen010.html">X-Men #12</a></li>
+<li><a href="Xmen010.html">X-Men #13</a></li>
+<li><a href="Xmen010.html">X-Men #14</a></li>
+<li><a href="Xmen010.html">X-Men #15</a></li>
+<li><a href="Xmen010.html">X-Men #16</a></li>
+<li><a href="Xmen010.html">X-Men #17</a></li>
+<li><a href="Xmen010.html">X-Men #18</a></li>
+<li><a href="Xmen010.html">X-Men #19</a></li>
+<li><a href="Xmen010.html">X-Men #20</a></li>
+
 </ul>
 Titles:<br>
 <a href="../X-MenAdventures/XmenAdventures.html">Adventures of the X-Men</a> Cartoon adaptation series <br>
