--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -9,13 +9,31 @@
 
 <body>
 <img src="Xmen001.jpg" title="X-Men #1 1963"> <br>
-Created by: Jack Kirby<br>
+Created by: Jack Kirby, Stan Lee<br>
 Publisher: 1963 - current Marvel<br>
-Series: 141 issues 1963 - 1981<br>
+Series: Comics 141 issues 1963 - 1981, Movies<br>
 <p>
 Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous comic title branches, books, television shows, films, and video games.
 </p><p>
 The X-Men are mutants, a subspecies of humans who are born with superhuman abilities. The X-Men fight for peace and equality between normal humans and mutants in a world where antimutant bigotry is fierce and widespread.
+</p><p>
+<img src="XmenMovie1.jpg" title="X-Men (2000)"> 
+<img src="XmenMovie2.jpg" title="X2 X-Men United (2003)"> 
+<img src="XmenMovie3.jpg" title="X-Men The Last Stand (2006)">
+</p><p>
+X-Men is an American superhero film series based on the Marvel comic series of the same name. 20th Century Fox obtained the film rights to the characters in 1994, and after numerous drafts, Bryan Singer was hired to direct X-Men (2000) and its sequel, X2 (2003), while Brett Ratner directed X-Men: The Last Stand (2006).
+</p><p>
+<img src="XmenMovie4.jpg" title="X-Men Origins Wolverine (2009)"> 
+<img src="XmenMovie5.jpg" title="X-Men First Class (2011)"> 
+<img src="XmenMovie6.jpg" title="The Wolverine (2013)"> 
+<img src="XmenMovie7.jpg" title="X-Men Days of Future Past (2014)"> 
+<img src="XmenMovie8.jpg" title="Deadpool (2016)"> 
+<img src="XmenMovie9.jpg" title="X-Men Apocalypse (2016)">
+<img src="XmenMovie10.jpg" title="Logan (2017)">
+</p><p>
+After each film earned higher box office grosses than its predecessor, several spin-off films were released, including a trilogy focused on the character of Wolverine: X-Men Origins: Wolverine (2009), The Wolverine (2013) and Logan (2017). A prequel, X-Men: First Class, was released in 2011, followed by sequels X-Men: Days of Future Past (2014) (also a sequel to X-Men: The Last Stand), and X-Men: Apocalypse (2016). A spin-off film, Deadpool (2016) was also released.
+</p><p>
+With ten films released, the X-Men film series is the seventh highest-grossing film series, having grossed over US$4.9 billion worldwide. It is set to continue with the releases of Deadpool 2 and X-Men: Dark Phoenix in 2018, and The New Mutants in 2019.
 </p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
