--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -33,6 +33,10 @@ X-Men is an American superhero film series based on the Marvel comic series of t
 </p><p>
 After each film earned higher box office grosses than its predecessor, several spin-off films were released, including a trilogy focused on the character of Wolverine: X-Men Origins: Wolverine (2009), The Wolverine (2013) and Logan (2017). A prequel, X-Men: First Class, was released in 2011, followed by sequels X-Men: Days of Future Past (2014) (also a sequel to X-Men: The Last Stand), and X-Men: Apocalypse (2016). A spin-off film, Deadpool (2016) was also released.
 </p><p>
+<img src="XmenMovie11.jpg" title="Deadpool 2 (2018)"> 
+<img src="XmenMovie12.jpg"  title="X-Men Dark Phoenix (2018)"> 
+<img src="XmenMovie13.jpg"  title="the New Mutants (2019)">
+</p><p>
 With ten films released, the X-Men film series is the seventh highest-grossing film series, having grossed over US$4.9 billion worldwide. It is set to continue with the releases of Deadpool 2 and X-Men: Dark Phoenix in 2018, and The New Mutants in 2019.
 </p><p>
 <div class="row"><div class="column">
@@ -93,6 +97,56 @@ With ten films released, the X-Men film series is the seventh highest-grossing f
 <div class="mySlides" style="text-align: center;"><img src="Xmen048.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Xmen049.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Xmen050.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen051.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen052.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen054.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen055.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen056.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen057.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen058.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen059.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen060.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen061.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen062.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen063.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen064.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen065.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen066.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen067.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen068.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen069.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen071.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen072.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen073.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen074.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen075.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen076.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen078.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen079.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen082.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen083.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen084.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen085.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen086.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen088.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen089.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen090.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen091.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen092.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen093.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen094.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen095.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen096.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen097.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen098.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen099.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen100.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
