--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -11,7 +11,8 @@
 <img src="Xmen001.jpg" title="X-Men #1 1963"> <br>
 Created by: Jack Kirby, Stan Lee<br>
 Publisher: Marvel<br>
-Series: Comics 1st Series 141 issues 1963 - 1981, Movies 2000 - 2018<br>
+Comic Series: First set started in 1963 (#1-66), (#67-93 = reprints), Giant-Sized X-Men #1 and issues #94-544 feature the new X-Men team, #114 title changes to "Uncanny X-Men" but same story line and numeration until issue #544 in 2012. Continues to #600 in 2015 with some title changes and renumbering.<br>
+Movie Series: 10 so far with more comming (2000 - 2017).<br>
 <p>
 Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous comic title branches, books, television shows, films, and video games.
 </p><p>
@@ -41,7 +42,7 @@ After each film earned higher box office grosses than its predecessor, several s
 With ten films released, the X-Men film series is the seventh highest-grossing film series, having grossed over US$4.9 billion worldwide. It is set to continue with the releases of Deadpool 2 and X-Men: Dark Phoenix in 2018, and The New Mutants in 2019.
 </p><p>
 COMICS<br>
-Early X-Men issues introduced the original team composed of Cyclops, Marvel Girl, Beast, Angel, and Iceman, along with their archenemy Magneto and his Brotherhood of Evil Mutants featuring Mastermind, Quicksilver, Scarlet Witch, and Toad. The comic focused on a common human theme of good versus evil and later included storylines and themes about prejudice and racism, all of which have persisted throughout the series in one form or another. 
+Early X-Men issues (#1-66) introduced the original team composed of Cyclops, Marvel Girl, Beast, Angel, and Iceman, along with their archenemy Magneto and his Brotherhood of Evil Mutants featuring Mastermind, Quicksilver, Scarlet Witch, and Toad. The comic focused on a common human theme of good versus evil and later included storylines and themes about prejudice and racism, all of which have persisted throughout the series in one form or another. 
 </p><p>
 The evil side in the fight was shown in human form and under some sympathetic beginnings via Magneto, a character who was later revealed to have survived Nazi concentration camps only to pursue a hatred for normal humanity. His key followers, Quicksilver and the Scarlet Witch, were Romani. Only one new member of the X-Men was added, Mimic/Calvin Rankin, but soon left due to his temporary loss of power.
 </p><p>
@@ -218,6 +219,65 @@ In a controversial move, Professor X relocated to outer space to be with Lilandr
 <div class="mySlides" style="text-align: center;"><img src="Xmen139.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Xmen140.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Xmen141.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen142.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen143.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen144.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen145.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen146.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen147.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen148.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen149.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen150.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen151.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen152.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen153.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen154.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen155.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen156.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen158.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen159.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen160.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen161.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen162.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen163.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen164.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen165.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen166.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen167.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen168.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen169.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen170.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen171.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen172.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen173.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen174.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen175.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen176.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen177.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen178.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen179.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen180.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen181.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen182.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen183.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen184.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen185.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen186.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen187.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen188.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen189.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen190.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen191.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen192.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen193.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen194.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen195.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen196.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen197.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen198.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen199.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen200.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="XmenGS1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="XmenGS2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="XmenGS3.jpg"></div>
@@ -237,7 +297,6 @@ In a controversial move, Professor X relocated to outer space to be with Lilandr
 <div class="mySlides" style="text-align: center;"><img src="XmenKSS13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="XmenKSS14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="XmenKSS15.jpg"></div>
-
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
