--- a/template.html
+++ b/template.html
@@ -9,8 +9,8 @@
 <body>
 title<br>
 <img src=".jpg"> <br>
-Series: <br>
-Publisher: <br>
+Series: 9 issues 1993 <br>
+Publisher: Marvel<br>
 <p>
 
 </p>
