--- a/HumanTorch/HumanTorch.html
+++ b/HumanTorch/HumanTorch.html
@@ -10,9 +10,11 @@
 the Human Torch<br>
 <img src="https://blzim.github.io/kb/Creation/MarvelComics/MarvelComics001.jpg"> 
 <img src="HumanTorch1.jpg"> <br>
-Series: <br>
+Series: 38 issues (#2-38) 1940-1954 <br>
 Publisher: Marvel<br>
 <p>
+First appearence in Marvel Comics #1 (1939).
+</p><p>
 The Human Torch is a fictional superhero appearing in American comic books published by Marvel Comics.  The original Human Torch was an andriod created in 1939 by writer-artist Carl Burgos for Marvel Comics' predecessor company, Timely Comics. The Human Torch, also known as Jim Hammond, first appeared in Marvel Comics #1 (Oct.1939), published by Marvel's predecessor, Timely Comics. 
 </p><p>
 The "Human" Torch was actually an android created by scientist Phineas Horton. He possessed the ability to surround himself with fire and control flames. In his earliest appearances, he was portrayed as a science fiction monstrosity, but quickly became a hero and adopted a secret identity as a police officer for the New York City Police Department. The Human Torch was one of Timely Comics' three signature characters, along with Captain America and Namor the Sub-Mariner. Like many superheroes, the Human Torch fell into obscurity by the 1950s.
