--- a/IKilledHitler/IKilledHitler.html
+++ b/IKilledHitler/IKilledHitler.html
@@ -9,10 +9,15 @@
 <body>
 I Killed Adolf Hitler<br>
 <img src="IKilledHitler.jpg"> <br>
-Series: Graphic Novel<br>
+Series: Graphic Novel 2017<br>
 Publisher: Fantagraphics<br>
+Story and art by Jason<br>
 <p>
-
+Between the opening note of perverse sexuality and the touching tribute to the permanence of true love at the end, murder, time travel and alternate futures fill in the second act of this astonishing graphic novel. Such a tale could only be penned by Jason, the Norwegian cartoonist who mixes outré fantasy with deadpan romanticism. 
+</p><p>
+As in all his books, this one is populated exclusively by a cast of lanky anthropomorphic animals. The setting is a world where hit man is just another job; the hero has a dissatisfied girlfriend and a boring job knocking off people who are merely annoying—a too loud neighbor, an overbearing boss. But as usual in Jason's work, the story soon veers off in an unexpected direction when the protagonist is hired to go back in time to kill Adolf Hitler via a time machine that takes 50 years to fully charge. 
+</p><p>
+He only has one chance, but messes up, allowing Hitler to come to the present day. The story—perhaps inspired by the French time travel film La Jetée—takes on even more unusual twists from there, before reaching a surprising and completely satisfying denouement that solves both the hero's relationship problems and World War II.
 </p>
 </body>
 </html>
