--- a/VicAndBlood/VicAndBlood.html
+++ b/VicAndBlood/VicAndBlood.html
@@ -3,17 +3,36 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Vic and Blood</title>
+<title>A Boy and His Dog</title>
 </head>
 
 <body>
 Vic and Blood The Chronicles of a Boy and his Dog<br>
-<img src="VicAndBlood.jpg"><br>
-Series: 2 issues 1987, 1 Graphic Novel 1989 <br>
-Publisher: Mad Dog Graphics, NBM<br>
+<img src="ABoyAndDog.jpg"> <img src="VicAndBlood.jpg"> <br>
+Series: Movie 1975, Comics 2 issues 1987, 1 Graphic Novel 1989 <br>
+Publisher: LQ/JAF Productions, Mad Dog Graphics, NBM<br>
 Story by Harlan Ellison<br>
 Illustrations by Richard Corben<br>
 <p>
+1975 MOVIE PLOT<br>
+Set in a post-nuclear war of the year 2024, the main character, Vic (Don Johnson) is an 18-year-old boy, born in and scavenging throughout the wasteland of the former south western United States. Vic is most concerned with food and sex. Having lost both of his parents, he has no formal education and does not understand ethics or morality. He is accompanied by a well-read, misanthropic, telepathic dog named Blood who helps him locate women in return for food. Blood cannot forage for himself due to the same genetic engineering that granted him telepathy. 
+</p><p>
+The two steal for a living, evading bands of marauders, berserk androids, and mutants. Blood and Vic have an occasionally antagonistic relationship (Blood frequently annoys Vic by calling him "Albert" for reasons never made clear), though they realize they need each other. Blood wishes to find the legendary promised land of "Over the Hill" where above ground utopias are said to exist, though Vic believes that they must make the best of what they have.
+</p><p>
+Searching a bunker for a woman for Vic to rape, they find one, but she has already been severely mutilated and is on the verge of death. Vic displays no pity, and is merely angered by the "wastefulness" of such an act as well as disgusted by the thought of satisfying his urges with a woman in such a condition. They move on, only to find slavers excavating another bunker. Vic steals several cans of their food, later using them to barter for goods in a nearby shanty town settlement.
+</p><p>
+That evening, while watching old vintage stag films at a local outdoor movie house, Blood claims to smell a woman, and the pair track her to a large underground warehouse. There, they meet Quilla June Holmes (Susanne Benton), a scheming and seductive teenage girl from "Downunder", a society located in a large underground vault. Unknown to the pair, Quilla June's father, Lou Craddock (Jason Robards), had sent her above ground to "recruit" surface dwellers. 
+</p><p>
+Blood takes an instant dislike to her, but Vic ignores him. After Vic saves Quilla June from raiders and mutants, they have repeated sex. Eventually, though, she takes off secretly to return to her underground society. Vic, enticed by the thought of women and sex, follows her, despite Blood's warnings. Blood remains at the portal on the surface.
+</p><p>
+Downunder has an artificial biosphere, complete with forests and an underground city, which is named Topeka, after the ruins of the city it lies beneath. The entire city is ruled by a triumvirate known as "The Committee", who have shaped Topeka into a bizarre caricature of pre-nuclear war America, with all residents wearing whiteface and clothes that harken back to the rural United States prior to WWII. 
+</p><p>
+Vic is told that he has been brought to Topeka to help fertilize the female population and is elated to learn of his value as a "stud." Then he is told that Topeka meets its need for exogamous reproduction by electro ejaculation and artificial insemination, which will not allow him to feel the pleasure or release that he seeks. Anybody who refuses to comply or otherwise defies the Committee is sent off to "the farm" and never seen again. Vic is then told that when his sperm has been used to impregnate 35 women, he will be sent to "the farm."
+</p><p>
+Quilla June helps Vic escape because she wants him to kill the Committee members and destroy their android enforcer, Michael (Hal Baylor), so that she can usurp power. Vic has no interest in politics or remaining underground, only wishing to return to Blood and the wasteland, where he feels at home. The rebellion is quashed by Michael, who crushes the heads of Quilla June's two co-conspirators before Vic disables him. She proclaims her "love" for Vic and decides to escape to the surface with him, realizing her rebellion has been undone.
+</p><p>
+On the surface, Vic and Quilla June discover Blood is starving and near death. She pleads with him to abandon Blood, forcing Vic to face his feelings. Vic decides that his loyalties lie with Blood. This results, off-camera, in her being killed and her flesh cooked, so that they can eat and survive. Blood thanks Vic for the food, and they both comment on Quilla June, with Vic stating it was her fault to follow him, and Blood joking that she didn't have bad 'taste'. The film ends with the boy and his dog walking off into the wasteland together.
+</p><p>
 <img src="VicAndBlood1.jpg">
 </p><p>
 Legendary Heavy Metal artist Corben adapts Ellisons award-winning, controversial short story A Boy and His Dog, which also inspired the 1970s cult-classic film starring Don Johnson. In a ruined future, Vic hunts for survival and women with the aid of his telepathic dog, Blood. When Vic is lured into a subterranean paradise that needs virile men, its bad news for the buddy team. Also featuring another Vic and Blood story, Eggsucker.
