--- a/template.html
+++ b/template.html
@@ -10,7 +10,10 @@
 title<br>
 <img src=".jpg"> <br>
 Series: <br>
-Publisher:<br>
+Publisher: <br>
+Written by<br>
+Illustrations by <br>
+
 <p>
 
 </p>
