--- a/IronManSubMariner/IronManSubMariner.html
+++ b/IronManSubMariner/IronManSubMariner.html
@@ -8,7 +8,7 @@
 
 <body>
 Iron Man Sub Mariner<br>
-<img src=".jpg"> <br>
+<img src="IronManSubMariner.jpg"> <br>
 Series: one-shot 1968<br>
 Publisher: Marvel<br>
 Written by Archie Goodwin<br>
