--- a/IronMan/IronMan.html
+++ b/IronMan/IronMan.html
@@ -47,6 +47,46 @@ Iron Man was ranked 12th on IGN's "Top 100 Comic Book Heroes" in 2011, and third
 <div class="mySlides" style="text-align: center;"><img src="IronMan008.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IronMan009.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="IronMan010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronMan050.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
