--- a/template.html
+++ b/template.html
@@ -10,10 +10,9 @@
 title<br>
 <img src=".jpg"> <br>
 Series: <br>
-Publisher: <br>
-Written by<br>
+Publisher: Marvel<br>
+Written by <br>
 Illustrations by <br>
-
 <p>
 
 </p>
