--- a/template.html
+++ b/template.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>tab</title>
+<title></title>
 </head>
 
 <body>
-title<br>
+<br>
 <img src=".jpg"> <br>
 Series: <br>
-Publisher: Marvel<br>
+Publisher: <br>
 Written by <br>
 Illustrations by <br>
 <p>
