--- a/JackOfFables/JackOfFables.html
+++ b/JackOfFables/JackOfFables.html
@@ -16,7 +16,7 @@ Illustrations by Tony Akins, Andrey Pepoy, James Jean<br>
 <p>
 After stealing money from Fabletown and pissing off all the wrong people, Jack of the Tales, who is at once every Jack of legend, was booted out of the Fables community. But for Jack, there was no better way to strike back than starring in his own series.
 </p><p>
-Last seen hitchhiking from Hollywood after releasing a trilogy of films (about himself) that made him an international superstar, the series follows Jack's immediate adventures as a wayward Fable in the heartland of America. His extreme road stories and encounters with other notorious, renegade Fables are just a few of the situations in store for this fan-favorite character of the multiple Eisner Award-winning FABLES series.
+Last seen hitchhiking from Hollywood after releasing a trilogy of films (about himself) that made him an international superstar, the series follows Jack's immediate adventures as a wayward Fable in the heartland of America. His extreme road stories and encounters with other notorious, renegade Fables are just a few of the situations in store for this fan-favorite character of the multiple Eisner Award-winning <a href="https://blzim.github.io/kb/Creation/Fables/Fables.html">FABLES</a> series.
 </p>
 </body>
 </html>
