--- a/template.html
+++ b/template.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title></title>
+<title> tab </title>
 </head>
 
 <body>
-<br>
+title <br>
 <img src=".jpg"> <br>
 Series: <br>
 Publisher: <br>
