--- a/KaZar/KaZar.html
+++ b/KaZar/KaZar.html
@@ -18,7 +18,9 @@ The second Ka-Zar started as a similar character, but reminiscent of both Tarzan
 </p><p>
 Originally written as a primitive and belligerent savage who spoke in broken English, Ka-Zar later became more articulate and civilized, although he retained a certain degree of distrust toward civilization and was generally wary of outside visitors to the Savage Land. Kevin Plunder refers to himself as the "Lord of the Savage Land", a phrase others have adopted, but this is not a formal title.
 </p><p>
-Ka-Zar's first solo story was published in Marvel Super-Heroes #19 (1969), and the character had features in the black-and-white magazine Savage Tales and the color title Astonishing Tales. He has had five self-titled series, the first published in 1970–1971 (three issues, mostly reprints), the second, (which continued the storyline from Astonishing Tales) in 1974-1977 (20 issues, subtitled Lord of the Hidden Jungle) by Mike Friedrich, Gerry Conway, and Doug Moench, the third in 1981-1984 (Ka-Zar the Savage, 34 issues) by Bruce Jones and Mike Carlin, the fourth in 1997-1998 (20 issues) written by Mark Waid. and the fifth in 2011 (5 issue miniseries) written by Paul Jenkins.
+Ka-Zar's first solo story was published in Marvel Super-Heroes #19 (1969), and the character had features in the black-and-white magazine Savage Tales and the color title Astonishing Tales. 
+</p><p>
+He has had five self-titled series, the first published in 1970–1971 (three issues, mostly reprints), the second, (which continued the storyline from Astonishing Tales) in 1974-1977 (20 issues, subtitled Lord of the Hidden Jungle) by Mike Friedrich, Gerry Conway, and Doug Moench, the third in 1981-1984 (Ka-Zar the Savage, 34 issues) by Bruce Jones and Mike Carlin, the fourth in 1997-1998 (20 issues) written by Mark Waid, and the fifth in 2011 (5 issue miniseries) written by Paul Jenkins.
 </p>
 </body>
 </html>
