--- a/KingKong/KingKong.html
+++ b/KingKong/KingKong.html
@@ -14,7 +14,9 @@ King Kong is a giant movie monster, resembling a giant gorilla that has appeared
 </p><p>
 <img src="SonOfKong.jpg"> <img src="KingKongVsGodzilla.jpg"> <img src="KingKongEscapes.jpg">
 </p><p>
-A sequel quickly followed that same year with The Son of Kong, featuring Little Kong. In the 1960s, Toho produced King Kong vs. Godzilla (1962), pitting a much larger Kong against Toho's own Godzilla, and King Kong Escapes (1967), based on The King Kong Show (1966–1969) from Rankin/Bass Productions. In 1976, Dino De Laurentiis produced a modern remake of the original film directed by John Guillermin. A sequel, King Kong Lives, followed a decade later featuring a Lady Kong. Another remake of the original, this time set in 1933, was released in 2005 from filmmaker Peter Jackson.
+A sequel quickly followed that same year with The Son of Kong, featuring Little Kong. In the 1960s, Toho produced King Kong vs. Godzilla (1962), pitting a much larger Kong against Toho's own Godzilla, and King Kong Escapes (1967), based on The King Kong Show (1966–1969) from Rankin/Bass Productions. 
+</p><p>
+In 1976, Dino De Laurentiis produced a modern remake of the original film directed by John Guillermin. A sequel, King Kong Lives, followed a decade later featuring a Lady Kong. Another remake of the original, this time set in 1933, was released in 2005 from filmmaker Peter Jackson.
 </p><p>
 <img src="KingKong1976.jpg"> <img src="KingKongLives1986.jpg"> <img src="KingKong2005.jpg">
 </p><p>
