--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -64,7 +64,52 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1925issue012.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1926issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1927issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1928issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue007.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue012.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
