--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -110,6 +110,66 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1929issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1930issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1931issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1932issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1933issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1934issue012.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
