--- a/KaZar/KaZar.html
+++ b/KaZar/KaZar.html
@@ -8,11 +8,15 @@
 
 <body>
 Ka-Zar<br>
-<img src="KaZar001.jpg"> <br>
-Series: 20 issues 1974, 1977. 34 issues 1981-1984. 20 issue 1997-1998. 5 issues 2011.<br>
+<img src="KaZarPulpMag001.jpg"> <br>
+Series: 3 pulp mag issues 1936-1937. 20 issues 1974, 1977. 34 issues 1981-1984. 20 issue 1997-1998. 5 issues 2011.<br>
 Publisher: Marvel<br>
 <p>
-Ka-Zar (pronunciation: KAY-sar) is the name of two jungle-dwelling fictional comic book characters published in the United States. The first Ka-Zar was named David Rand, and debuted in 1936, first appearing in pulp magazines of the 1930s. In 1939 he was adapted for his second iteration, a comic book character for Timely Comics, the 1930s and 1940s predecessor of Marvel Comics. The second and more prominent Ka-Zar was named Kevin Plunder, and first appeared in 1965. He is a heroic character appearing in American comic books published by Marvel Comics.
+Ka-Zar (pronunciation: KAY-sar) is the name of two jungle-dwelling fictional comic book characters published in the United States. The first Ka-Zar was named David Rand, and debuted in 1936, first appearing in pulp magazines of the 1930s. 
+</p><p>
+In 1939 he was adapted for his second iteration, a comic book character for Timely Comics, the 1930s and 1940s predecessor of Marvel Comics. The second and more prominent Ka-Zar was named Kevin Plunder, and first appeared in 1965. He is a heroic character appearing in American comic books published by Marvel Comics.
+</p><p>
+<img src="KaZar001.jpg">
 </p><p>
 The second Ka-Zar started as a similar character, but reminiscent of both Tarzan and of writer-artist Joe Kubert's 1950s caveman character, Tor. Created by Stan Lee and Jack Kirby in The X-Men #10 (March 1965), he lives in the dinosaur-populated Savage Land, which was hidden beneath Antarctica by extraterrestrials. The character was based on his pulp magazine namesake only to the extent that he used the same name and rough "jungle lord" concept, and Lee has admitted that he had never even read any of the original Ka-Zar stories.
 </p><p>
