--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -190,6 +190,30 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1936issue009.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1936issue010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1936issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1937issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue012.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
