--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -214,6 +214,18 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1938issue012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue001.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
