--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -226,6 +226,42 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1939issue011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1940issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1941issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1942issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1943issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1944issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue001.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
