--- a/WeirdTales/WeirdTales.html
+++ b/WeirdTales/WeirdTales.html
@@ -262,6 +262,29 @@ The magazine is regarded by historians of fantasy and science fiction as a legen
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue005.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1945issue006.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1946issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1947issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1948issue006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WeirdTales1949issue006.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
